fix picture- flex-wrap

--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@ body {
   background-color: #88BBD6;
   padding: 20px;
 }
+
 /*--
 section {
    display: flex;
@@ -77,25 +78,28 @@ img {
 ---*/
 .flex-container {
   display: flex;
-  justify-content: center;
+  /*justify-content: center;*/
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .allflex {
-  min-width: 450px;
+  /*min-width: 450px;*/
   margin: 5px;
-
+  flex: auto;
 }
 
 img {
-  width: 450px;
-  max-width:100%
-  max-height: 450px;
-
-
+  /*width: 450px;*/
+  /*max-width:100%;*/
+  /*max-height: 450px;*/
+  width:100%;
+  height:200px;
+  object-fit: cover;
 }
 
 .footer {
+  position: static;
   width: 100%;
   margin: 0;
   bottom: 0px;
